[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# [tool.setuptools.packages.find]
# # Tell setuptools to look for packages in the 'src' directory
# where = ["lockr"]

# --- Project Metadata (Replaces setup() arguments) ---
[project]
name = "lockr"
version = "0.1.3"
description = "A simple python CLI application to encrypt and decrypt files with a password, using symmetric AES encryption."
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "MIT"}
authors = [
  {name = "Paarth Bhasin", email = "paarthbhasin4@gmail.com"},
]
requires-python = ">=3.9.22"
dependencies = [
    "click (>=8.1.7,<9.0.0)",
    "poetry-core>=2.0.0,<3.0.0",
    'requests==2.27.1',
    'redis==4.3.1',
    'fakeredis==2.32.1',
]

[dependency-groups]
dev = [
    "click (>=8.1.7,<9.0.0)"
]
# The classifiers list from setup.py
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Operating System :: Unix',
    'Operating System :: POSIX',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Topic :: Utilities',
]

[tool.poetry.scripts]
lockr = "lockr.cli.__main__:cli_group"


[project.urls]
Homepage = "https://github.com/PaarthB/LockR"
